feat: implement get me route
