# src/routes.ts
@@ -26,6 +26,13 @@ export const Routes = [
 	// },
 	{
 		method: "get",
+		route: "/users/me",
+		controller: UserController,
+		action: "getMe",
+		checkAuth: true,
+	},
+	{
+		method: "get",
 		route: "/users/:id",
 		controller: UserController,
 		action: "one",
@@ -35,21 +42,21 @@ export const Routes = [
 		route: "/users",
 		controller: UserController,
 		action: "save",
-		checkAuth: true
+		checkAuth: true,
 	},
 	{
 		method: "patch",
 		route: "/users/:id",
 		controller: UserController,
 		action: "update",
-		checkAuth: true
+		checkAuth: true,
 	},
 	{
 		method: "delete",
 		route: "/users/:id",
 		controller: UserController,
 		action: "remove",
-		checkAuth: true
+		checkAuth: true,
 	},
 	//posts
 	{
@@ -69,20 +76,20 @@ export const Routes = [
 		route: "/posts",
 		controller: PostController,
 		action: "save",
-		checkAuth: true
+		checkAuth: true,
 	},
 	{
 		method: "patch",
 		route: "/posts/:id",
 		controller: PostController,
 		action: "update",
-		checkAuth: true
+		checkAuth: true,
 	},
 	{
 		method: "delete",
 		route: "/posts/:id",
 		controller: PostController,
 		action: "remove",
-		checkAuth: true
+		checkAuth: true,
 	},
 ];
